--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
+    "react-moment": "^1.1.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
