--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/drawer": "^5.12.5",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/core": "^6.0.0-next.8",
+    "@react-navigation/drawer": "^6.0.0-next.10",
+    "@react-navigation/native": "^6.0.0-next.8",
+    "@react-navigation/stack": "^6.0.0-next.17",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-moment": "^1.1.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
