--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-html/parser": "^0.1.0",
+    "@react-native-html/renderer": "^0.0.30",
     "@react-navigation/core": "^6.0.0-next.8",
     "@react-navigation/drawer": "^6.0.0-next.10",
     "@react-navigation/native": "^6.0.0-next.8",
@@ -26,7 +28,9 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.2.0",
+    "react-native-webview": "^11.6.2",
+    "react-native-youtube": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
