--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -210,6 +210,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation 'com.google.firebase:firebase-auth'
 }
 
 // Run this once to be able to run the application with BUCK
