--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/auth": "^12.8.0",
     "@react-native-html/parser": "^0.1.0",
     "@react-native-html/renderer": "^0.0.30",
     "@react-navigation/core": "^6.0.0-next.8",
     "@react-navigation/drawer": "^6.0.0-next.10",
     "@react-navigation/native": "^6.0.0-next.8",
+    "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.0-next.17",
+    "axios": "^0.21.4",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-moment": "^1.1.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
