--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
+    "react-contenteditable": "^3.3.6",
     "react-moment": "^1.1.1",
     "react-native": "0.64.0",
     "react-native-config": "^1.4.2",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.4.0",
+    "react-native-pell-rich-editor": "^1.8.6",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
