--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/native": "^6.0.0-next.8",
     "@react-navigation/native-stack": "^6.1.0",
     "@react-navigation/stack": "^6.0.0-next.17",
+    "@types/google-libphonenumber": "^7.4.23",
     "axios": "^0.21.4",
+    "google-libphonenumber": "^3.2.26",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
