--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
+    "react-native-toast-message": "^2.1.1",
     "react-native-webview": "^11.6.2",
     "react-native-youtube": "^2.0.1"
   },
