--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "^3.2.0",
     "react-native-toast-message": "^2.1.1",
     "react-native-webview": "^11.17.1",
-    "react-native-youtube": "^2.0.1"
+    "react-native-youtube": "^2.0.1",
+    "react-select": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
